[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/m5x7-32.tres" type="DynamicFont" id=1]
[ext_resource path="res://gui/settings/GraphicsContainer.gd" type="Script" id=2]


[node name="GraphicsContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 320.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )
text = "settings_title_graphics"
align = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 30.0
margin_right = 320.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 24.0

[node name="FullscreenCheck" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
flat = true
expand_icon = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 28.0
margin_top = 5.0
margin_right = 320.0
margin_bottom = 19.0
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "settings_graphics_fullscreen"
autowrap = true
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/FullscreenCheck" to="." method="_on_FullscreenCheck_toggled"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer2/Label" to="." method="_on_Label_gui_input"]
